--- a/css/timer.css
+++ b/css/timer.css
@@ -15,7 +15,7 @@ header{
 }
 
 #header_contact {
-    color: white;
+    color: black;
     font-size: 30px;
 }
 
@@ -41,86 +41,14 @@ header{
 }
 
 #global ul li a:hover{
-    background-color: rgb(241, 217, 0);
+    background-color: rgb(62, 221, 195);
 }
 body{
     background-color: lightblue;
     width: 980px;
-    margin: 0 auto;
-}
-h1{
+    margin: 0 auto;}
+
+div {
+    background-color: white;
     width: 600px;
-    float: center;
-}
-h2{
-    text-align: center;
-}
-h3{
-    width:300px;
-    text-align: center;
-    padding:10px;
-    margin:70px auto 50px;
-    background-color: rgba(255,255,255,.7);
-    border-radius: 5px;
-}
-#keis{
-    text-align: center;
-}
-form {
-    background-color:lightblue;
-    color:white;
-    width:450px;
-    height: 450px;
-    margin:0 auto 30px;
-    padding:15px;
-    text-align: center;
-    font-size:30px;
-}
-.content p{
-    margin:0;
-    padding:0;
-}
-
-.button{
-width:100%;
-text-align: center;
-}
-
-.buttonbutton{
-    width:100%;
-text-align: center;
-}
-
-button button{
-    border:none;
-    width: 80px;
-    padding:10px 0 10px 0;
-    border-radius: 6px;
-    color:white;
-    background-color:cadetblue;
-    box-shadow:3px 3px 6px rgba(0,0,0,.4);
-}
-
-.buttonbutton button{
-    border:none;
-    width: 80px;
-    padding:10px 0 10px 0;
-    border-radius: 6px;
-    color:black;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow:3px 3px 6px rgba(40, 134, 172, 0.4);
-}
-#ma{
-    width: 980px;
-    clear: both;
-    overflow: hidden;
-    margin: 16px auto;
-    text-align: center;
-    font-size: 30px;
-}
-#button{
-    font-size: 30px;
-}
-#min #min_1 #min_2 #min_3 #sec #sec_1 #sec_2 #sec_3{
-    font: 30px;
 }
