--- a/css/timer.css
+++ b/css/timer.css
@@ -6,7 +6,21 @@ header{
     width: 980px;
     margin: 0 auto;
 }
-
+title {
+    float: left;
+    color: darkgoldenrod;
+}
+h1 {
+    float: left;
+}
+h2{
+    margin: 0 auto;
+    width: auto;
+    background-color: aqua;
+}
+canvas {
+    font-style: aq;
+}
 #global{
     width: 980px;
     clear: both;
@@ -51,4 +65,78 @@ body{
 div {
     background-color: white;
     width: 600px;
+    margin: 0 auto;
+    
+}
+
+ul.cp_list {
+	position: relative;
+	padding: 0 0.5em;
+	margin-top: 2em;
+	list-style-type: none;
+	border: solid 2px #00796B;
+}
+ul.cp_list::after {
+	position: absolute;
+	content:attr(title);
+	padding: 1px 7px;
+	letter-spacing: 0.05em;
+	font-weight: bold;
+	font-size: .8em;
+	background: #00796B;
+	color: #fff;
+	bottom: 100%;
+	left: -2px;
+	border-radius: 4px 4px 0px 0px;
+}
+ul.cp_list li {
+	line-height: 1.5;
+	padding: 0.5em 0 0.5em 1.4em;
+	border-bottom: 1px dashed #4DB6AC;
+}
+ul.cp_list li::before {
+	position: absolute;
+	content: "
+ul.cp_list {
+position: relative;
+padding: 0 0.5em;
+margin-top: 2em;
+list-style-type: none;
+border: solid 2px #00796B;
+}
+ul.cp_list::after {
+position: absolute;
+content:attr(title);
+padding: 1px 7px;
+letter-spacing: 0.05em;
+font-weight: bold;
+font-size: .8em;
+background: #00796B;
+color: #fff;
+bottom: 100%;
+left: -2px;
+border-radius: 4px 4px 0px 0px;
+}
+ul.cp_list li {
+line-height: 1.5;
+padding: 0.5em 0 0.5em 1.4em;
+border-bottom: 1px dashed #4DB6AC;
+}
+ul.cp_list li::before {
+position: absolute;
+content: "\002713";
+color: #00796B;
+font-weight: bold;
+left : 0.5em;
+}
+ul.cp_list li:last-of-type {
+border-bottom: none;
+}
+2713";
+	color: #00796B;
+	font-weight: bold;
+	left : 0.5em;
+}
+ul.cp_list li:last-of-type {
+	border-bottom: none;
 }
