--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "uft-8";
+@media screen and (min-width: 500px) and (max-width: 999px) {
 /*全体画像の設定*/
 html {
     background-image: url(../images/black.jpg);
@@ -215,3 +216,4 @@ article.listScroll{
     font-weight: bold;
     color: #000000;
   }
+}
